--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -8,8 +8,8 @@
   <div class="container">
     <h1>Welcome to Your App</h1>
     <p>Choose an option:</p>
-    <form method="POST" action="/option">
-        <button type="submit" name="choice" value="option1">Option 1</button>
+    <form method="POST" action="/main_menu">
+        <button type="submit" name="choice" value="play">Play</button>
         <button type="submit" name="choice" value="option2">Option 2</button>
         <button type="submit" name="choice" value="option3">Option 3</button>
         <button type="submit" name="choice" value="option4">Option 4</button>
