--- a/templates/game_main.html
+++ b/templates/game_main.html
@@ -4,10 +4,10 @@
 
 <body>
     DEBUG: The word is: {{ word }}
-    Tries Remaining: {{ tries_remaining }}
     <form method="POST", action="/play">
         
         <input type="text" name="user_word"> <p>{{ error_message }}</p>
+        <p>Tries Remaining: {{ tries_remaining }}</p>
 
 
 
